# shred

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bors.toml  build.rs  ci-script.sh  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench.rs
examples/: async.rs  basic_dispatch.rs  batch_dispatching.rs  custom_bundle.rs  derive_bundle.rs  dyn_sys_data.rs  dynamic_resource_id.rs  fetch_opt.rs  generic_derive.rs  multi_batch_dispatching.rs  par_seq.rs  prefetch.rs  seq_dispatch.rs  thread_local.rs
shred-derive/: Cargo.toml
shred-derive/src/: lib.rs
src/: bitset.rs  cell.rs  dispatch.rs  lib.rs  meta.rs  res.rs  system.rs  task.rs
src/dispatch/: async.rs  async_dispatcher.rs  batch.rs  batch_builder.rs  builder.rs  dispatcher.rs  mod.rs  par_seq.rs  send_dispatcher.rs  stage.rs
src/res/: data.rs  entry.rs  fallback.rs  mod.rs  setup.rs  tl.rs
src/world/: data.rs  entry.rs  mod.rs  setup.rs
src/world/res_downcast/: COPYRIGHT  LICENSE-MIT  mod.rs  tests.rs
tests/: dispatch.rs  dispose.rs  fetch_panic.rs  meta_table_safety_113.rs  nightly.rs  no_parallel.rs
