[package]
name = "shred-derive"
version = "0.1.0"
authors = ["torkleyy"]
description = "Custom derive for shred"
documentation = "https://docs.rs/shred_derive"
repository = "https://github.com/torkleyy/shred/shred-derive"
keywords = ["parallel", "tasks", "resources", "ecs", "derive"]
license = "MIT/Apache-2.0"

[dependencies]
syn = "0.11"
quote = "0.3"

[lib]
proc-macro = true
