[package]
name = "shred-derive"
version = "0.6.1"
authors = ["torkleyy"]
description = "Custom derive for shred"
documentation = "https://docs.rs/shred_derive"
repository = "https://github.com/slide-rs/shred/shred-derive"
keywords = ["parallel", "systems", "resources", "ecs", "derive"]
license = "MIT/Apache-2.0"

[dependencies]
syn = "1.0.11"
quote = "1.0.2"
proc-macro2 = "1.0.6"

[lib]
proc-macro = true
