[package]
name = "shred-derive"
version = "0.6.3"
edition = "2018"
authors = ["torkleyy"]
description = "Custom derive for shred"
documentation = "https://docs.rs/shred_derive"
repository = "https://github.com/slide-rs/shred/shred-derive"
keywords = ["parallel", "systems", "resources", "ecs", "derive"]
license = "MIT OR Apache-2.0"

[dependencies]
syn = "1.0.55"
quote = "1.0.8"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true
